Refactor: 버스킹 일정 스트림을 리스트로 바꾸는 로직 수정 #S12P11E204-106